# tensorflow_cc

./: README.md
tensorflow_cc/: CMakeLists.txt
tensorflow_cc/cmake/: TensorflowBase.cmake  TensorflowStatic.cmake  build.sh  build_tensorflow_static.sh.in
